--- a/doc/user_guide/tex/genom-using.tex
+++ b/doc/user_guide/tex/genom-using.tex
@@ -1,5 +1,5 @@
 %
-% Copyright (c) 2001 LAAS/CNRS                        --  Wed Nov  7 2001
+% Copyright (c) 2001,2009 LAAS/CNRS                        --  Wed Nov  7 2001
 % All rights reserved.                                     Anthony Mallet
 %
 % This document is a translation of the French documentation of GenoM,
@@ -380,7 +380,7 @@ and are documented in the sections below).
 \subsection{An example}
 
 We  present here a few  examples, which involve  a task {\tt pilo} that
-must send  the {\tt  SetSpeed} and   {\tt MoveDistance}  requests  to the
+must send  the {\tt  SetSpeed} and   {\tt Goto}  requests  to the
 module {\tt demo}. 
 
 \subsubsection{Sending a control request: {\tt RqstAndRcv}}
