--- a/doc/user_guide/tex/genom-edition.tex
+++ b/doc/user_guide/tex/genom-edition.tex
@@ -582,7 +582,7 @@ is called once, just before the module exits.
 the execution tasks wakes  up ({\em before} all the other activites). Thus, for  a  periodical task, it is  also
 periodical.
 
-\item {\tt codel\_task\_main} is a {\em permanent} codel. It is executed each time
+\item {\tt codel\_task\_main2} is a {\em permanent} codel. It is executed each time
 the execution tasks wakes  up ({\em after} all the other activites). Thus, for  a  periodical task, it is  also
 periodical.
 
