Typo in documentation: 2^15 not written correctly
Reported by Raquel

--- a/doc/user_guide/tex/genom-edition.tex
+++ b/doc/user_guide/tex/genom-edition.tex
@@ -171,7 +171,7 @@ The parameters are the following:
 \begin{itemize}
 \item {\tt number:} is the identification number of the module. 
       It must be greater that $1000$ (small numbers are reserved for
-      system) and smaller than $2^15=32768$. It should be unique and no other
+      system) and smaller than $2^{15}=32768$. It should be unique and no other
       module should use the same one. It is used to generate unique error
       report numbers.
 
