Update date for release.
While there, conform to the rules for authors affiliation.

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -51,12 +51,15 @@
 
 \title{\fontsize{40}{40}\bf\GenoM\\\vskip1cm\Huge User's Guide}
 \author{Sara Fleury, Matthieu Herrb, Anthony Mallet \\
-LAAS-CNRS\\
+CNRS ; LAAS \\
 7, Av. du Colonel Roche\\
-31077 Toulouse Cedex 4 - France\\
-{sara,matthieu,mallet}@laas.fr}
+F-31077 Toulouse, France\\
+\\
+Université de Toulouse; UPS; INSA; INP; ISAE; LAAS; F-31077 Toulouse France\\
+\\
+\url{{sara.fleury,matthieu.herrb,anthony.mallet}@laas.fr}}
 
-\date{July 2009}
+\date{October 2009}
 
 \begin{document}
 
