Put logo back on slides titlepage.

--- a/doc/slides/genom.tex
+++ b/doc/slides/genom.tex
@@ -34,7 +34,7 @@
  
 \date{October 2009\\
 \figw{./figures/openlaas.png}{4cm}}
-\institute{CNRS-LAAS}
+\institute{\includegraphics[height=2cm]{openlaas}}
 \date{October 2009}
 
 
